--- a/app.json
+++ b/app.json
@@ -15,7 +15,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "Nous avons besoin de votre localisation pour afficher la carte",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Nous avons besoin de votre localisation pour afficher la carte",
+        "NSLocationAlwaysUsageDescription": "Nous avons besoin de votre localisation pour afficher la carte"
+      },
+      "android": {
+        "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
+      }
     },
     "android": {
       "adaptiveIcon": {
