--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.6.0",
     "react-native-safe-area-context": "4.5.0",
     "react-redux": "^8.0.5"
   },
