--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^7.0.1",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
@@ -25,7 +28,8 @@
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.6.0",
     "react-native-safe-area-context": "4.5.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
