--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^7.0.1",
+    "@expo/config-plugins": "6.0.1",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/auth": "^17.4.2",
     "@react-native-google-signin/google-signin": "^9.0.2",
@@ -17,19 +18,20 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.10",
+    "expo-dev-client": "~2.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.20.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1295.0",
     "react-native-config": "^1.5.0",
     "react-native-dotenv": "^3.4.8",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-maps": "^1.6.0",
+    "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
-    "react-redux": "^8.0.5",
-    "expo-dev-client": "~2.2.1"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
