--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "expo-dev-client": "~2.2.1",
     "expo-google-app-auth": "~8.3.0",
     "expo-image-picker": "~14.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.7",
     "react-native-calendars": "^1.1295.0",
     "react-native-config": "^1.5.0",
     "react-native-dotenv": "^3.4.8",
@@ -29,6 +30,7 @@
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
