--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "meegle-client",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@expo/config-plugins": "~6.0.0",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/stack": "^6.3.16",
-    "@reduxjs/toolkit": "^1.9.3",
-    "expo": "~48.0.10",
-    "expo-image-picker": "~14.1.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.7",
-    "react-native-calendars": "^1.1295.0",
-    "react-native-config": "^1.5.0",
-    "react-native-dotenv": "^3.4.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-maps": "1.3.2",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-redux": "^8.0.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "name": "meegle-client",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@expo/config-plugins": "~6.0.0",
+        "@react-native-community/datetimepicker": "6.7.3",
+        "@react-navigation/native": "^6.1.6",
+        "@react-navigation/stack": "^6.3.16",
+        "@reduxjs/toolkit": "^1.9.3",
+        "expo": "~48.0.10",
+        "expo-dev-client": "^2.2.1",
+        "expo-image-picker": "~14.1.1",
+        "expo-splash-screen": "~0.18.2",
+        "expo-status-bar": "~1.4.4",
+        "react": "18.2.0",
+        "react-native": "0.71.7",
+        "react-native-calendars": "^1.1295.0",
+        "react-native-config": "^1.5.0",
+        "react-native-dotenv": "^3.4.8",
+        "react-native-gesture-handler": "~2.9.0",
+        "react-native-google-places-autocomplete": "^2.5.1",
+        "react-native-maps": "1.3.2",
+        "react-native-safe-area-context": "4.5.0",
+        "react-native-screens": "~3.20.0",
+        "react-redux": "^8.0.5"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0"
+    },
+    "private": true
 }
