--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.4.0",
     "expo": "~48.0.10",
     "expo-auth-session": "~4.0.3",
     "expo-crypto": "~12.2.1",
