--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
